force-app/main/default/objects/Contact/fields/Campo_1__c.field-meta.xml
<CustomField>
    <fullName>Campo_1__c</fullName>
    <label>Campo 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>