force-app/main/default/objects/Contact/fields/Campo_2__c.field-meta.xml
<CustomField>
    <fullName>Campo_2__c</fullName>
    <formula>Campo_1__c * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campo 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>