force-app/main/default/objects/Contact/fields/Campo_3__c.field-meta.xml
<CustomField>
    <fullName>Campo_3__c</fullName>
    <formula>Campo_1__c *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campo 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>