force-app/main/default/objects/Contact/fields/CampoBaseUser__c.field-meta.xml
<CustomField>
    <fullName>CampoBaseUser__c</fullName>
    <label>CampoBaseUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>