force-app/main/default/objects/Contact/fields/Legajo__c.field-meta.xml
<CustomField>
    <fullName>Legajo__c</fullName>
    <label>Legajo</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>